Fix flickering animation

--- a/styles/Cards/Card.styl
+++ b/styles/Cards/Card.styl
@@ -41,6 +41,7 @@
   position absolute
   top 0
   left 0
+  transform-style preserve-3d
   backface-visibility hidden // hide back of pane during swap
 
 .cardFront
