--- a/styles/Cards/Cards.styl
+++ b/styles/Cards/Cards.styl
@@ -1,7 +1,7 @@
 
 .cards
   padding 40px
-  margin 20px
+  margin 40px 20px
   border solid 1px #666
   overflow hidden
   h5
